fixed layout on mobile

--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body {
 
 
 .avatar {
-    border-radius: 0px;
+    border-radius: 30px;
     height: 150px;
     width: auto;
     -moz-box-shadow:     0 0 10px rgba(0,0,0,.3);
@@ -105,7 +105,7 @@ body {
 
 
 
-@media only screen and (min-width: 900px){
+@media only screen and (min-width: 961px){
     .avatar{
         height: 30%;
         width: 30%;
@@ -175,7 +175,7 @@ body {
 }
 
 
-@media only screen and (max-width: 899px){
+@media only screen and (max-width: 960px){
     .post {
         border-radius: 0.5rem;
         padding: 0.1rem 0 1rem 0;
@@ -229,7 +229,7 @@ body {
         text-shadow: #FFFFFF 0px 0px 5px;
         color:#FFFFFF;
 
-        -webkit-animation: fadelink 0.2s;
+        -webkit-animation: fadelink 0.2s; /* Safari, Chrome and Opera > 12.1 */
            -moz-animation: fadelink 0.2s;
             -ms-animation: fadelink 0.2s;
              -o-animation: fadelink 0.2s;
